--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
   <canvas id="canvas1"></canvas>
+  <div class="controls">
+    <label for="animations">Choose animation:</label>
+    <select name="animations" id="animations">
+      <option value="idle">idle</option>
+      <option value="jump">jump</option>
+      <option value="fall">Fall</option>
+      <option value="run">run</option>
+      <option value="dizzy">dizzy</option>
+      <option value="sit">sit</option>
+      <option value="roll">roll</option>
+      <option value="bite">bite</option>
+      <option value="ko">ko</option>
+    </select>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
