--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sprite animation</title>
+  <title>Parallax Backgrounds</title>
   <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-  <canvas id="canvas1"></canvas>
+  <div id="container">
+    <canvas id="canvas1"></canvas>
+    <p>Game speed: <span id="showGameSpeed"></span></p>
+    <input type="range" min="0" max="20" value="5" class="slider" id="slider">
+  </div>
 
   <script src="script2.js"></script>
 </body>
