--- a/raven.html
+++ b/raven.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="raven.css">
 </head>
 <body>
+  <canvas id="collisionCanvas"></canvas>
   <canvas id="canvas1"></canvas>
 
   <script src="raven.js"></script>
