--- a/essai.html
+++ b/essai.html
@@ -11,7 +11,10 @@
   <canvas id="collisionCanvas"></canvas>
   <canvas id="canvas1"></canvas>
   <h1>Il faut tuer les corbeaux, en cliquant dessus, avant qu'ils ne sortent de l'écran, seulement cinq peuvent s'échapper.</h1>
-
+  <div id="secret">
+    <input type="tel" name="score" id="score">
+    <button id="restart" onclick="restartGame()"></button>
+  </div>
   <script src="essai.js"></script>
 </body>
 </html>
